--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>MaybeCat | Ask a Cat</title>
-    <meta name="description" content="Magic 8-Ball that poops and purrs. Questionable advice from adoptable cats. The funny cat website with cattitude. Cat translator for behavior and personality." />
+    <meta name="description" content="The ultimate cat-powered oracle for humans seeking answers. Get questionable life advice, mystical guidance, and feline wisdom from adoptable cats. A Magic 8-Ball experience designed to help you navigate life with cattitude." />
+    <meta name="keywords" content="advice, life answers, cat oracle, decision maker, feline wisdom, ask a cat, cat translator, funny advice, shelter cats, cat behavior, cat personality, mystical guidance" />
 
     <!-- Google Search Console -->
     <meta name="google-site-verification" content="vTZKlFtEDKBlfnXBhd6d_CeYe7a27se-HFzQnzC6xVY" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://maybecat.com/" />
+    <link rel="canonical" href="https://www.maybecat.com/" />
 
-    <!-- Favicon -->
+    <!-- Favicon & Icons -->
     <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#EC4899" />
 
@@ -22,8 +24,8 @@
     <meta property="og:title" content="MaybeCat | Ask a Cat" />
     <meta property="og:description" content="Magic 8-Ball that poops and purrs. Questionable advice from adoptable cats. The funny cat website with cattitude. Cat translator for behavior and personality." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://maybecat.com/" />
-    <meta property="og:image" content="https://maybecat.com/og-maybecat.png" />
+    <meta property="og:url" content="https://www.maybecat.com/" />
+    <meta property="og:image" content="https://www.maybecat.com/og-maybecat.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="MaybeCat — a mystical cat oracle with tarot-inspired design in pink and gold" />
@@ -34,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MaybeCat | Ask a Cat" />
     <meta name="twitter:description" content="Magic 8-Ball that poops and purrs. Questionable advice from adoptable cats. The funny cat website with cattitude. Cat translator for behavior and personality." />
-    <meta name="twitter:image" content="https://maybecat.com/og-maybecat.png" />
+    <meta name="twitter:image" content="https://www.maybecat.com/og-maybecat.png" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -45,14 +47,14 @@
           "@type": "WebSite",
           "name": "MaybeCat",
           "alternateName": ["Maybe Cat", "MaybeCat Oracle", "Cat Oracle"],
-          "url": "https://maybecat.com/",
+          "url": "https://www.maybecat.com/",
           "description": "Magic 8-Ball that poops and purrs. Questionable advice from adoptable cats. The funny cat website with cattitude. Cat translator for behavior and personality.",
           "keywords": "cat translator, funny cat website, cat behavior, cat personality, cattitude, ask a cat, cat advice, cat oracle, cat questions, understand your cat, communicate with cat, cat body language, cat training, funny cat videos, adoptable cats, shelter cats, cat wisdom"
         },
         {
           "@type": "WebApplication",
           "name": "MaybeCat — Ask a Cat",
-          "url": "https://maybecat.com/",
+          "url": "https://www.maybecat.com/",
           "description": "The funny cat website where you ask questions and a real cat answers with full cattitude. Upload your own cat or choose an adoptable shelter cat as your oracle. Understand cat behavior, decode cat personality, and get brutally honest cat advice. A cat translator for the questions you're afraid to ask humans. Funnier than cat videos because the cat is talking back.",
           "applicationCategory": "EntertainmentApplication",
           "operatingSystem": "Any",
@@ -62,7 +64,7 @@
             "priceCurrency": "USD"
           },
           "featureList": "Cat translator, Cat personality readings, Shelter cat adoption, Upload your own cat, Share oracle readings, Cat behavior decoder, Cat advice with cattitude",
-          "screenshot": "https://maybecat.com/og-maybecat.png",
+          "screenshot": "https://www.maybecat.com/og-maybecat.png",
           "softwareHelp": {
             "@type": "CreativeWork",
             "name": "How MaybeCat Works",
@@ -153,10 +155,22 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; background: linear-gradient(135deg, #EC4899 0%, #F472B6 20%, #FBBF24 50%, #F59E0B 80%, #D97706 100%); color: #78350F; font-family: Georgia, serif; text-align: center; padding: 20px;">
+        <h1 style="font-size: 4rem; margin: 0 0 1rem 0; text-shadow: 2px 2px 0 #FBBF24;">MaybeCat</h1>
+        <h2 style="font-size: 2rem; margin: 0 0 1rem 0; color: #FFFBEB;">Ask a Cat. Get Answers.</h2>
+        <p style="font-size: 1.25rem; max-width: 600px; margin: 0 auto 1rem auto; background: rgba(255,255,255,0.2); padding: 1rem; border-radius: 1rem;">
+          The funny cat website where real adoptable shelter cats give you advice with cattitude.
+          A cat translator for your life decisions.
+        </p>
+        <p style="opacity: 0.8;">Loading the oracle...</p>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
